RESOLVED FIXED224922
Fix KVO for camera/microphone capture state WKWebView API
https://bugs.webkit.org/show_bug.cgi?id=224922
Summary Fix KVO for camera/microphone capture state WKWebView API
youenn fablet
Reported 2021-04-22 02:02:32 PDT
Add API tests for camera/microphone state WKWebView API
Attachments
Patch (11.82 KB, patch)
2021-04-23 08:49 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2021-04-22 02:02:47 PDT
youenn fablet
Comment 2 2021-04-23 08:49:21 PDT
EWS
Comment 3 2021-04-23 10:21:35 PDT
Committed r276504 (236961@main): <https://commits.webkit.org/236961@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426911 [details].
Note You need to log in before you can comment on or make changes to this bug.